fixed some css spacing word spacing image placement and such

--- a/static/style.css
+++ b/static/style.css
@@ -52,6 +52,7 @@ a {
     transition: transform 0.2s ease;
     position: relative;
     padding: 14px;
+    height: 170px;
 }
 
 .player-card:hover {
@@ -65,6 +66,12 @@ a {
 
 .player-info h3 {
     margin: 0;
+    font-weight: bold;
+}
+
+.player-info p {
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    line-height: 20px
 }
 
 .player-image {
